pkg/crdtest/testdata/standard/valid/deny-with-ports.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: deny-with-ports
spec:
  tier: Admin
  priority: 0
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  ingress:
    - action: Deny
      name: select-all-deny-all
      from:
      - pods:
          namespaceSelector:
            matchLabels: {}
          podSelector:
            matchLabels: {}
      protocols:
        - tcp:
            destinationPort:
              number: 8080
            # flags: [syn] # future extension example
        - tcp:
            destinationPort:
              range:
                start: 8080
                end: 9090
        - udp:
            destinationPort:
              number: 8080
        - udp:
            destinationPort:
              number: 9090
        # Does not exist in the current API, but shows an example of
        # an additional, non-port based extension.
#       - icmp:
#           type: 7
#           code: 3
